--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "npm install && zip -r function.zip node_modules index.js"
   },
   "author": "ufoo68",
   "license": "MIT",
